--- a/HTML assignment/table/table.html
+++ b/HTML assignment/table/table.html
@@ -12,7 +12,7 @@
 <h3> Try creating the Table below:</h3>
 <table border="1">
     <tr>
-        <th style="color: #9d2a5c">Student ID</th>
+        <th class="purple">Student ID</th>
         <th>Course</th>
         <th>Grade</th>
     </tr>
