--- a/HTML assignment/table/table.html
+++ b/HTML assignment/table/table.html
@@ -32,7 +32,7 @@
         <td>71</td>
     </tr>
     <tr>
-        <td class="total" colspan="3">Total of three students</td>
+        <td colspan="3">Total of three students</td>
     </tr>
 </table>
 
